# bumps

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CHANGES.rst  LICENSE.txt  MANIFEST.in  Makefile  README.amdahl  README.rst  README.txt  biome.json  bumps.iss  check_examples.py  check_fitters.py  installer.spec  master_builder.py  pyproject.toml  pytest.ini  rtd-requirements  run.py  setup.py  setup_py2app.py  setup_py2exe.py  test.py  unix_build.sh  webview-requirements
.github/: dependabot.yaml  release.yaml  release.yml
.github/actions/: get-pyproject-python-versions.mjs
.github/workflows/: build-distributables.yml  build-webview.yml  deploy.yml  first_workflow.yml  pypi-publish.yml  second_workflow.yml  test-publish.yml  test-webview-client.yaml  test.yml  triggered.yml  webview-client-publish.yml  wheel-build.yml
bumps/: __init__.py  __main__.py  api.py  bounds.py  bspline.py  cheby.py  cli.py  cli_old.py  corrtest.py  curve.py  data.py  dump.py  errplot.py  fitproblem.py  fitservice.py  fitters.py  formatnum.py  function.py  history.py  initpop.py  interrupt.py  logger.py  lsqerror.py  mapper.py  modelfn.py  monitor.py  mono.py  mpfit.py  names.py  nested.py  numdifftools.py  numpyerrors.py  openmp_ext.py  options.py  parameter.py  partemp.py  partemp_feedback.py  partemp_feedback_Swap.py  partemp_feedback_stepper.py  partemp_feedback_stepper_Swap.py  (+20 more)
bumps/amqp_map/: config.py  core.py  jsonrpc.txt  pmap.py  threaded.py  url.py
bumps/dream/: __init__.py  acr.py  bounds.py  build_compiled.py  build_plot_layout.py  compiled.c  compiled.py  convergence.py  core.py  corrplot.py  crossover.py  diffev.py  digits.py  entropy.py  exppow.py  formatnum.py  gelman.py  geweke.py  initpop.py  ksmirnov.py  mahal.py  matlab.py  metropolis.py  model.py  outliers.py  parcoord.py  state.py  stats.py  tile.py  util.py  varplot.py  views.py  walk.py
bumps/examples/constraints/: inequality.py
bumps/examples/curvefit/: curve.py  ode.py  poisson.py  readme.rst
bumps/examples/entropy/: check_entropy.py  peak.py
bumps/examples/peaks/: peaks.py  readme.rst
bumps/examples/test_functions/: anticor.py  cross.py  mixture.py  model.py  model_lib.py  readme.rst
bumps/gui/: __main__.py  about.py  app_frame.py  app_panel.py  console.py  convergence_view.py  data_view.py  fit_dialog.py  fit_thread.py  fit_view.py  gui_app.py  input_list.py  log_view.py  old_cli.py  old_options.py  parameter_view.py  plot_view.py  resfiles.py  signal.py  summary_view.py  uncertainty_view.py  util.py  utilities.py
bumps/gui/resources/: __init__.py
bumps/lib/: bumpsmodule.cc  convolve.c  convolve_sampled.c  erf.c  methods.cc  methods.h  rebin.h  rebin2D.h  rebin2D_test.cc  rebin_test.cc  resolution.c
bumps/mystic/: __init__.py  abc.py  bounds.py  condition.py  fitservice.py  functional.py  meshgrid.py  model.py  monitor.py  parameter.py  plotter.py  problem.py  pseudopark.py  solver.py  stop.py  util.py
bumps/mystic/examples/: __init__.py  circle.py  corana.py  decay.py  model.py  simple.py
bumps/mystic/optimizer/: de.py  diffev_compat.py
bumps/numdifftools/: README.txt  __init__.py  core.py  extrapolation.py  info.py
bumps/plots/: corrplot.py  custom_plot.py
bumps/webview/: build_client.py  client.py  client.pyi  webserver.py
bumps/webview/client/: .gitignore  .npmignore  ModelNode.vue.biome  (+12 more)
client/: .npmignore  README.md  index.html  index_template.txt  package.json  vite.config.js
client/src/: App.vue  fitter_defaults.ts  setupDrawLoop.ts  style.css
doc/: Makefile  conf.py  genmods.py  gentut.py  index.rst  make.bat  pylit.py  requirements.txt  rst_prolog  sitedoc.py  tutorial.rst
doc/_extensions/: README.txt  dollarmath.py  png.py  slink.py  wx_directive.py
doc/_static/: haiku-site.css
doc/api/: abeles.rst  bspline.rst  cheby.rst  cli.rst  experiment.rst  fitproblem.rst  fitters.rst  freeform.rst  initpop.rst  instrument.rst  magnetic.rst  mapper.rst  materialdb.rst  mystic.bounds.rst  mystic.formatnum.rst  partemp.rst  probe.rst  quasinewton.rst  reflmodule.rst  snsdata.rst  staj.rst  stajconvert.rst  wsolve.rst
doc/developer/: index.rst  release.rst
doc/examples/: index.rst
doc/getting_started/: contributing.rst  index.rst  install.rst  license.rst  server.rst  webview.rst  webview_client.rst  webview_server.rst
doc/guide/: data.rst  entropy.rst  experiment.rst  fitting.rst  index.rst  intro.rst  materials.rst  optimizer.rst  options.rst  parameter.rst  sample.rst  toffset.py
dream_examples/: anticor.py  banana.py  mixture.py  mixture2.py  quadfit.py  wsolve.py
extra/: build_conda_packed.ps1  build_conda_packed.sh  bumps_webview.bat  dmgpack.sh  installer.nsi  mc.py  mod_stubs.py
extra/amqp_map/: USECASE.txt  pmap.py  rpc.py  url.py
extra/appbin/: bumps  ipython
extra/dream_examples/: anticor.py  banana.m  banana.py  mixture.py  mixture2.py  noisybanana.py  quadfit.py
extra/fit_functions/: __init__.py  br8.py  circle.py  corana.py  dejong.py  fosc3d.py  griewangk.py  lorentzian.py  mogi.py  poly.py  wavy.py  zimmermann.py
extra/installer-hooks/: hook-bumps.py  hook-scipy.special._ufuncs.py
extra/jobqueue/: client.py  daemon.py  db.py  dispatcher.py  jobid.py  mimedict.py  notify.py  resourcelimits.py  rest.py  runjob.py  server.py  server.rst  services.py  simplequeue.py  slurm.py  store.py  worker.py
extra/platform_scripts/: bumps-webview  bumps_shell.bat  bumps_webview.bat  make_linux_desktop_shortcut.sh
extra/sasview/: FitPage2.fitv  cyl_400_40.txt  model.py  modelcyl.py  sasbumps.py  smodel.py
fit_functions/: __init__.py  br8.py  dejong.py  griewangk.py  poly.py
jobqueue/: README  client.py  daemon.py  db.py  dispatcher.py  notify.py  resourcelimits.py  rest.py  runjob.py  server.py  services.py  simplequeue.py  slurm.py  store.py  worker.py
jobqueue/templates/: index.html
jobqueue/test/: test_crud.py  test_db.py
jobqueue/www/: jobqueue.wsgi
server/: __main__.py  fit_thread.py  profile_plot.py  state.py  state_hdf5_backed.py  varplot.py  webserver.py
(+634 files in other folders)
