[project]
name = "bumps"
dynamic = ["version"]
description = "Data fitting with bayesian uncertainty analysis"
readme = "README.rst"
authors = [
    { name = "Paul Kienzle", email = "paul.kienzle@nist.gov" },
]
license = { file = "LICENSE.txt" }
dependencies = [
    'numpy',
    'scikit-learn',
    'scipy',
    'typing_extensions>=3.7.4',
    'graphlib_backport; python_version < "3.9"'
]
classifiers=[
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: Public Domain',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Scientific/Engineering :: Physics',
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    'build',
    'pytest',
    'pytest-cov',
    'wheel',
    'setuptools',
    'sphinx',
]
webview = [
    'aiohttp',
    'blinker',
    'dill',
    'matplotlib',
    'python-socketio',
    'plotly',
    'mpld3',
    'nodejs',
    'h5py'
]

[project.urls]
documentation = "https://bumps.readthedocs.io"
homepage = "https://bumps.readthedocs.io"
repository = "https://github.com/bumps/bumps"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "bumps.__version__" }

[tool.setuptools]
packages = ['bumps', 'bumps.dream', 'bumps.webview.server']

[project.scripts]
bumps = "bumps.main:main"
bumps-webview = "bumps.webview.server.webserver:main"

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob=*.rst --cov=bumps"
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
testpaths = ["bumps", "doc/getting_started", "doc/guide"]
norecursedirs = ["gui", "webview/client"]
python_files = ["*.py"]
python_classes = ["NoClassTestsWillMatch"]
python_functions = ["test", "*_test", "test_*"]
