[project]
name = "bumps"
dynamic = ["version"]
description = "Data fitting with bayesian uncertainty analysis"
readme = "README.rst"
authors = [{ name = "Paul Kienzle", email = "paul.kienzle@nist.gov" }]
license = { file = "LICENSE.txt" }
dependencies = [
    'numpy',
    'scipy',
    'h5py',
    'dill',
    'matplotlib',
    'blinker',
    'graphlib_backport; python_version < "3.9"',
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'License :: Public Domain',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Chemistry',
    'Topic :: Scientific/Engineering :: Physics',
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    'build',
    'pre-commit',
    'pytest',
    'pytest-cov',
    'ruff',
    'wheel',
    'setuptools',
    'sphinx',
    'versioningit',
]
webview = [
    'aiohttp',
    'python-socketio',
    'plotly',
    'mpld3',
]

[project.urls]
documentation = "https://bumps.readthedocs.io"
homepage = "https://bumps.readthedocs.io"
repository = "https://github.com/bumps/bumps"

[build-system]
requires = ["setuptools", "versioningit"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
extend-exclude = [
    "bumps/webview/client/*",
    "doc/pylit.py",
    "extra/platform_scripts/*",
]

[tool.ruff.lint.per-file-ignores]
"bumps/names.py" = ["F401"] # Unused import

# [tool.ruff.lint]
# select = [
#     "E",   # pycodestyle
#     "F",   # Pyflakes
#     "UP",  # pyupgrade
#     "B",   # flake8-bugbear
#     "SIM", # flake8-simplify
#     "I",   # isort
# ]

[tool.setuptools.dynamic]
version = { attr = "bumps.__version__" }

[tool.setuptools.packages.find]
include = ["bumps*"]
exclude = ["**/node_modules*"]

[tool.setuptools.data-files]
"share/icons" = ["extra/*.png", "extra/*.svg", "extra/*.ico", "extra/*.icns"]

[tool.versioningit.vcs]
method = "git"
default-tag = "0.0.1"

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.write]
file = "bumps/_version.py"

[project.scripts]
bumps = "bumps.webview.server.cli:main"

[tool.pytest.ini_options]
# TODO: remove --assert=plain when https://github.com/scipy/scipy/issues/22236 is resolved
addopts = "--doctest-modules --doctest-glob=*.rst --cov=bumps --assert=plain"
doctest_optionflags = ["ELLIPSIS", "NORMALIZE_WHITESPACE"]
testpaths = ["bumps", "doc/getting_started", "doc/guide"]
norecursedirs = ["gui", "webview/client"]
python_files = ["*.py"]
python_classes = ["NoClassTestsWillMatch"]
python_functions = ["test", "*_test", "test_*"]
